Name:                datastore
Version:             0.0.1
Cabal-Version:       >= 1.2
Synopsis:            Data Store and Editor
Category:            graphics
Description:
  The Data Store editor.

Author:              Eyal Lotem
Maintainer:          eyal.lotem@gmail.com
Copyright:           (c) 2010 by Eyal Lotem
License:             GPL
Stability:           experimental
build-type:          Simple

Executable Editor
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4 && < 5, vtywidgets >= 0.0.6, binary == 0.5.*,
                       directory >= 1.0.1.1, bytestring >= 0.9, BerkeleyDB >= 0.8,
                       random >= 1.0.0, utf8-string >= 0.3, vty >= 4.2.1, fclabels >= 0.4.2 && < 0.5,
                       containers >= 0.3 && < 0.4, transformers >= 0.2.1 && < 0.3
  Other-Modules:       Data.Random.Instances,
                       Data.ByteString.Utils,
                       Data.Record.Label.Tuple,
                       Data.Guid,
                       Data.IRef,
                       Data.IRef.Tree,
                       Data.Rev.Change,
                       Data.Rev.Version,
                       Data.Rev.Branch,
                       Data.Rev.VersionMap,
                       Data.Rev.View,
                       Data.Transaction,
                       Db,
                       Editor.Data,
                       Editor.Anchors,
                       Editor.Config
  ghc-options:         -O2 -Wall
  main-is:             Editor/Main.hs
  ghc-prof-options:    -prof -auto-all

Executable makedb
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4 && < 5, vtywidgets >= 0.0.6, binary == 0.5.*,
                       directory >= 1.0.1.1, bytestring >= 0.9, BerkeleyDB >= 0.8,
                       random >= 1.0.0, utf8-string >= 0.3, vty >= 4.2.1
  Other-Modules:       Db,
                       Data.Random.Instances,
                       Data.ByteString.Utils,
                       Data.Rev.Change,
                       Data.Rev.Version,
                       Data.Rev.Branch,
                       Data.Rev.VersionMap,
                       Data.Rev.View,
                       Data.Transaction,
                       Data.IRef,
                       Data.IRef.Tree,
                       Editor.Data,
                       Editor.Anchors
  ghc-options:         -O2 -Wall
  main-is:             Editor/makedb.hs
  ghc-prof-options:    -prof -auto-all

Executable toxml
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4 && < 5, vtywidgets >= 0.0.6, binary == 0.5.*,
                       directory >= 1.0.1.1, bytestring >= 0.9, BerkeleyDB >= 0.8,
                       random >= 1.0.0, utf8-string >= 0.3, vty >= 4.2.1
  Other-Modules:       Data.Random.Instances,
                       Data.ByteString.Utils,
                       Data.Rev.Change,
                       Data.Rev.Version,
                       Data.Rev.Branch,
                       Data.Rev.VersionMap,
                       Data.Rev.View,
                       Data.Transaction,
                       Data.IRef,
                       Data.IRef.Tree,
                       Db,
                       Editor.Data,
                       Editor.Anchors
  ghc-options:         -O2 -Wall
  main-is:             Editor/toxml.hs
  ghc-prof-options:    -prof -auto-all
