Name:                datastore
Version:             0.0.1
Cabal-Version:       >= 1.2
Synopsis:            Data Store
Category:            database
Description:
  An implementation of a key/value store wrapper and revision control based on it.

Author:              Eyal Lotem
Maintainer:          eyal.lotem@gmail.com
Copyright:           (c) 2010 by Eyal Lotem
License:             GPL
Stability:           experimental
build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  ghc-options:         -O2 -Wall
  ghc-prof-options:    -prof -auto-all
  Build-Depends:       base >= 4 && < 5, binary == 0.5.*,
                       directory >= 1.0.1.1 && < 1.1, bytestring >= 0.9 && < 1.0, BerkeleyDB >= 0.8 && < 0.9,
                       random >= 1.0.0 && < 1.1, utf8-string >= 0.3 && < 0.4, fclabels >= 0.11.1.1 && < 0.12,
                       containers >= 0.3 && < 0.4, transformers >= 0.2.1 && < 0.3, filepath >= 1.1 && < 1.2
  Exposed-Modules:     Data.Random.Instances,
                       Data.ByteString.Utils,
                       Data.Binary.Utils,
                       Data.Record.Label.Tuple,
                       Data.Record.Label.Maybe,
                       Data.Record.Label.Map,
                       Data.Store.Guid,
                       Data.Store.ContainerRef,
                       Data.Store.IRef,
                       Data.Store.IRef.Tree,
                       Data.Store.Rev.Change,
                       Data.Store.Rev.Version,
                       Data.Store.Rev.Branch,
                       Data.Store.Rev.ViewBranchInternal,
                       Data.Store.Rev.View,
                       Data.Store.Transaction,
                       Data.Store.Property,
                       Data.Store.Db
